--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -42,7 +42,7 @@ body .projectBoxes h3{
 
 }
 
-postcard.a {
+.card>a {
   display: block;
   margin-bottom: 10px;
   padding: 10px;
@@ -55,10 +55,10 @@ postcard.a {
   text-decoration: none;
 }
 
-postcard.a.unflip { display: none; }
+.card>a.unflip { display: none; }
 div.card { position: relative; }
 
-postcard>img { 
+.card>img { 
   position: absolute;
   width: 190px;
   height: 265px;
@@ -69,7 +69,7 @@ postcard>img {
   transition: all 1s;
 }
 
-postcard.img.front { z-index: 1; }
+.card>.img.front { z-index: 1; }
 
 postcard>img.back, div#flip:target img.front {
   -webkit-transform: rotateY(-180deg);
