--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -56,7 +56,7 @@ body .projectBoxes h3{
 }
 
 .card>a.unflip { display: none; }
-div.card { position: relative; }
+.card>div.card { position: relative; }
 
 .card>img { 
   position: absolute;
@@ -71,7 +71,7 @@ div.card { position: relative; }
 
 .card>img.front { z-index: 1; }
 
-postcard>img.back, div#flip:target img.front {
+.card>img.back, div#flip:target img.front {
   -webkit-transform: rotateY(-180deg);
   -moz-transform: rotateY(-180deg);
   -o-transform: rotateY(-180deg);
