--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -91,3 +91,13 @@ div#flip:target img.back {
   transform: rotateY(0deg);
   z-index: 1;
 }
+
+.postcard{
+		border: 10px solid black;
+	border-radius: 0px;
+	Background-color: white;
+	width: 67%;
+	margin: auto;
+	margin-top: 25px;
+
+}
