--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -60,8 +60,8 @@ body .projectBoxes h3{
 
 .card>img { 
   position: absolute;
-  width: 500px;
-  height: 200px;
+  width: "30%";
+  height: "30%";
   -webkit-transition: all 1s;
   -moz-transition: all 1s;
   -o-transition: all 1s;
@@ -97,6 +97,7 @@ div#flip:target img.back {
 	border-radius: 0px;
 	Background-color: white;
 	width: 67%;
+	
 	margin: auto;
 	margin-top: 25px;
 
