--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -103,7 +103,7 @@ div#flip:target img.back {
 }
 
 .dummy{
-	width: "50%";
-	height: "50%";
+	width: 50%;
+	height: 500px;
 	visibility: hidden;
 }
