--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -45,8 +45,10 @@ body .projectBoxes h3{
 .card>a {
   display: block;
   margin-bottom: 10px;
+  margin-right:100%;
   padding: 10px;
-  width: 135px;
+  padding-left:50%;
+  width: 20%;
   background: grey;
   border: 1px solid black;
   border-radius: 0px;
