--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -31,6 +31,10 @@ body .projectBoxes h3{
 	text-decoration: underline;
 }
 
+.RSVP{
+    display: inline-block;	
+}
+
 
 .info{
 	border: 10px solid black;
@@ -94,6 +98,7 @@ div#flip:target img.back {
 }
 
 .postcard{
+	   display: inline-block;
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: black;
@@ -101,7 +106,6 @@ div#flip:target img.back {
 	
 	margin-left: 0;
 	margin-top: 25px;
-
 }
 
 
