--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -104,7 +104,7 @@ div#flip:target img.back {
 	border-radius: 0px;
 	Background-color: black;
 	width: 50%;
-	height: 600px;
+	height: 100%;
 	margin-left: 0;
 	margin-top: 25px;
 }
