--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -4,6 +4,8 @@ body{
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
+	width: auto;
+	height: auto;
 	
 }
 
