--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -56,6 +56,7 @@ body .projectBoxes h3{
   padding-left:45%;
   padding-right:45%;
   width: 10%;
+	height:
   background: grey;
   border: 1px solid black;
   border-radius: 0px;
@@ -105,7 +106,7 @@ div#flip:target img.back {
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: black;
-	width: 50%;
+	width: 60%;
 	height: 100%;
 	margin-left: 0;
 	margin-top: 25px;
