--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -69,12 +69,12 @@ body .projectBoxes h3{
 	margin-top: 25px;
 
 }
-.venmo.img{
+.venmo img{
 	width: 25%;
 	height: 25%;
 }
 
-.info{
+.info img{
 	width:25%;
 	height:25%;
 }
