--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -50,8 +50,8 @@ body .projectBoxes h3{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: white;
-	width: 25%;
-	height: 25%;
+	width: 20%;
+	height: 20%;
 	margin: auto;
 	margin-top: 25px;
 	margin-right: 10%;
@@ -66,8 +66,8 @@ body .projectBoxes h3{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: rgb(61,149,206);
-	width: 25%;
-	height: 25%;
+	width: 20%;
+	height: 20%;
 	margin: auto;
 	margin-top: 25px;
 	margin-left: 10%;
@@ -76,11 +76,13 @@ body .projectBoxes h3{
 .venmo img{
 	width: 50%;
 	height: 50%;
+	margin: auto;
 }
 
 .info img{
 	width:50%;
 	height:50%;
+	margin: auto;
 }
 	
 
