--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -98,6 +98,8 @@ body .projectBoxes h3{
 	width: 52%;
 	margin: auto;
 	margin-top: 25px;
+	background-color: rgb(51,0,111);
+	color: rgb(232,211,162);
 
 }
 
