--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -56,6 +56,7 @@ body .projectBoxes h3{
 	margin-right: 3%;
 	margin-left: 2%;
 	Background-color: rgb(51,0,111);
+	color: rgb(232,211,162);
 	
 
 }
