--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -57,7 +57,7 @@ body .projectBoxes h3{
 	margin-left: 2%;
 	Background-color: rgb(51,0,111);
 	color: rgb(232,211,162);
-	
+	text-align: center;
 
 }
 
