--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -71,7 +71,8 @@ body .projectBoxes h3{
 	height: 20%;
 	margin-top: 25px;
 	margin-left: 3%;
-	margin right: 2%
+	margin right: 2%;
+	text-align: center;
 	color: white;
 
 }
