--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -159,7 +159,7 @@ body .projectBoxes h3{
 	margin-left: 0;
 	margin-top: 25px;
 }
-.postcard img{
+.flip-container{
 	width: 200%;
 	height: 100%;
 
