--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -156,7 +156,7 @@ body .projectBoxes h3{
 	margin-left: 0;
 	margin-top: 25px;
 }
-.postcard img{
+.flipper img{
 	width: 100%;
 	height: 100%;
 	margin-top: -50%;
