--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -156,21 +156,10 @@ body .projectBoxes h3{
 	margin-left: 0;
 	margin-top: 25px;
 }
-.flipper img{
+.postcard img{
 	width: 100%;
 	height: 100%;
-	margin-top: -105%;
 
-}
-
-.dummy img{
-	width: 0%;
-	height: 0%;
-	padding-bottom: 75%;
-}
-
-.flipper img{
-padding-top: -20%;
 }
 
 
