--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -155,9 +155,10 @@ body .projectBoxes h3{
 	margin-left: 0;
 	margin-top: 25px;
 }
-.postcard img{
+.dummy img{
 	width: 100%;
 	height: 100%;
+	margin-top: -100:
 
 }
 
