--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -158,7 +158,8 @@ body .projectBoxes h3{
 .dummy img{
 	width: 100%;
 	height: 100%;
-	margin-top: -100:
+	margin-top: -100%;
+		padding-top: -100%; 
 
 }
 
