--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -131,6 +131,8 @@ body .projectBoxes h3{
 	position: absolute;
 	top: 0;
 	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /* front pane, placed above back */
