--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -108,7 +108,7 @@ body .projectBoxes h3{
 
 
 .flip-container {
-	
+	perspective: 1000px;
 }
 	/* flip the pane when hovered */
 	.flip-container:hover .flipper, .flip-container.hover .flipper {
@@ -154,5 +154,10 @@ body .projectBoxes h3{
 	height: 100%;
 	margin-left: 0;
 	margin-top: 25px;
+}
+.postcard img{
+	width: 100%;
+	height: 100%;
+
 }
 
