--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -155,10 +155,12 @@ body .projectBoxes h3{
 	margin-left: 0;
 	margin-top: 25px;
 }
-.postcard img{
+.dummy img{
 	width: 100%;
 	height: 100%;
-
+position: absolute;
+	top: 0;
+	left: 0;
 
 }
 
