--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -129,8 +129,8 @@ body .projectBoxes h3{
 	backface-visibility: hidden;
 
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: -100%;
+	left: -100%;
 }
 
 /* front pane, placed above back */
@@ -158,9 +158,6 @@ body .projectBoxes h3{
 .dummy img{
 	width: 100%;
 	height: 100%;
-position: absolute;
-	top: 0;
-	left: 0;
 
 }
 
