--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -149,7 +149,7 @@ body .projectBoxes h3{
 	 height: 50%;
 	border: 10px solid black;
 	border-radius: 0px;
-	Background-color: black;
+	Background-color: blue;
 	width: 52%;
 	height: 100%;
 	margin-left: 0;
