--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -155,13 +155,15 @@ body .projectBoxes h3{
 	margin-left: 0;
 	margin-top: 25px;
 }
-.postcard img{
+.flipper img{
 	width: 100%;
 	height: 100%;
 
 }
 
-.dummy{
+.dummy img{
+	width: 100%;
+	height: 100%;
 	margin-top: -100%;
 	padding-top: -100%;
 }
