--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -106,43 +106,40 @@ body .projectBoxes h3{
 
 }
 
-
-.flip-container {
-	perspective: 1000px;
+#f1_container {
+  position: relative;
+  margin: 10px auto;
+  width: 450px;
+  height: 281px;
+  z-index: 1;
 }
-	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
-
-
-
-/* flip speed goes here */
-.flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
-
+#f1_container {
+  perspective: 1000;
 }
-
-/* hide back of pane during swap */
-.front, .back {
-	backface-visibility: hidden;
-
-	position: absolute;
-	top: 0;
-	left: 0;
+#f1_card {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 1.0s linear;
 }
-
-/* front pane, placed above back */
-.front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
+#f1_container:hover #f1_card {
+  transform: rotateY(180deg);
+  box-shadow: -5px 5px 5px #aaa;
 }
-
-/* back, initially hidden pane */
-.back {
-	transform: rotateY(180deg);
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.face.back {
+  display: block;
+  transform: rotateY(180deg);
+  box-sizing: border-box;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  background-color: #aaa;
 }
 
 .postcard{
@@ -155,15 +152,5 @@ body .projectBoxes h3{
 	margin-left: 0;
 	margin-top: 25px;
 }
-.flipper img{
-	width: 100%;
-	height: 100%;
-	margin-top: -100%;
-	padding: -100%;
-}
 
-.dummy img{
-	width: 100%;
-	height: 100%;
-}
  
