--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -139,7 +139,7 @@ body .projectBoxes h3{
   padding: 10px;
   color: white;
   text-align: center;
-  background-color: #aaa;
+  background-color: black;
 }
 
 .postcard{
