--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -109,8 +109,8 @@ body .projectBoxes h3{
 #f1_container {
   position: relative;
   margin: 10px auto;
-  width: 450px;
-  height: 281px;
+  width: 100%;
+  height: 100%;
   z-index: 1;
 }
 #f1_container {
@@ -120,11 +120,10 @@ body .projectBoxes h3{
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  transition: all 1.0s linear;
+  transition: all 0.5s linear;
 }
 #f1_container:hover #f1_card {
   transform: rotateY(180deg);
-  box-shadow: -5px 5px 5px #aaa;
 }
 .face {
   position: absolute;
