--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -109,8 +109,8 @@ body .projectBoxes h3{
 #f1_container {
   position: relative;
   margin: 10px auto;
-  width: 100%;
-  height: 100%;
+  width: 700px;
+  height: 500px;
   z-index: 1;
 }
 #f1_container {
