--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -109,8 +109,8 @@ body .projectBoxes h3{
 .f1_container {
   position: relative;
   margin: 10px auto;
-  width: 100%;
-  height: 100%;
+  width: 700px;
+  height: 500px;
   z-index: 1;
 }
 #f1_container {
@@ -141,16 +141,6 @@ body .projectBoxes h3{
   background-color: black;
 }
 
-.postcard{
-	 height: 50%;
-	border: 10px solid black;
-	border-radius: 0px;
-	Background-color: black;
-	width: 52%;
-	height: 100%;
-	margin-left: 0;
-	margin-top: 25px;
-}
 
  .postcard img{
 	 width: 100%;
