--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -117,7 +117,16 @@ body .projectBoxes h3{
 }
 
 
- .postcard img{
+ .front img{
+	 width: 100%;
+	 height: 100%;
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+}
+
+
+ .back img{
 	 width: 100%;
 	 height: 100%;
 	 position: absolute;
