--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -120,7 +120,7 @@ body .projectBoxes h3{
  .front img{
 	 width: 100%;
 	 height: 100%;
-	 position: absolute;
+	 position: relative;
 	 top: 0;
 	 left: 0;
 }
@@ -129,7 +129,7 @@ body .projectBoxes h3{
  .back img{
 	 width: 100%;
 	 height: 100%;
-	 position: absolute;
+	 position: relative;
 	 top: 0;
 	 left: 0;
 }
