--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -123,7 +123,7 @@ body .projectBoxes h3{
 	 position: relative;
 	 top: 0;
 	 left: 0;
-	 z-index: -1;
+
 }
 
 
@@ -131,6 +131,6 @@ body .projectBoxes h3{
 	 width: 100%;
 	 height: 100%;
 	 position: relative;
-	 top: 0;
+	 top: -100%;
 	 left: 0;
 }
