--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -117,9 +117,9 @@ body .projectBoxes h3{
 }
 
 
- .front img{
-	 width: 100%;
-	 height: 100%;
+ .postcard img{
+	 width: 75%;
+	 height: 75%;
 	 position: relative;
 	 top: 0;
 	 left: 0;
@@ -127,10 +127,3 @@ body .projectBoxes h3{
 }
 
 
- .back img{
-	 width: 100%;
-	 height: 100%;
-	 position: relative;
-	 top: -100%;
-	 left: 0;
-}
