--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -120,7 +120,7 @@ body .projectBoxes h3{
  .postcard img{
 	 width: 100%;
 	 height: 100%;
-	 position: relative;
+	 position: absolute;
 	 top: 0;
 	 left: 0;
 
