--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -117,7 +117,7 @@ body .projectBoxes h3{
 }
 
 
- .postcard img{
+ .front{
 	 width: 100%;
 	 height: 100%;
 	 position: absolute;
@@ -125,5 +125,16 @@ body .projectBoxes h3{
 	 left: 0;
 
 }
+
+.back{
+	 width: 100%;
+	 height: 100%;
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+
+}
+}
+
 
 
