--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -121,8 +121,7 @@ body .projectBoxes h3{
 	 width: 100%;
 	 height: 100%;
 	 position: absolute;
-	 top: 0;
-	 left: 0;
+	 
 
 }
 
@@ -130,8 +129,8 @@ body .projectBoxes h3{
 	 width: 100%;
 	 height: 100%;
 	 position: absolute;
-	 top: 0;
-	 left: 0;
+	 top: -100%;
+	 
 
 }
 
