--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -116,6 +116,12 @@ body .projectBoxes h3{
 	margin-top: 25px;
 }
 
+.postcard img{
+	width: 100%;
+	height: 100%;
+
+}
+
 
  .front{
 	 width: 10%;
