--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -124,16 +124,19 @@ body .projectBoxes h3{
 
 
  .front{
-	 width: 10%;
-	 height: 10%;
+	 width: 100%;
+	 height: 100%;
 
 	 
 
 }
 
 .back{
-	 width: 10%;
-	 height: 10%;
+	
+	 width: 100%;
+	 height: 100%;
+	 position: relative;
+	top: -100%;
 
 	 
 
