--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -135,8 +135,8 @@ body .projectBoxes h3{
 	
 	 width: 100%;
 	 height: 100%;
-	 position: relative;
-	top: -100%;
+	 position: absolute;
+	 top: -100%;
 
 	 
 
