--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -126,8 +126,6 @@ body .projectBoxes h3{
  .front{
 	 width: 100%;
 	 height: 100%;
-	  visibility: hidden;
-
 	 
 
 }
@@ -136,7 +134,7 @@ body .projectBoxes h3{
 	
 	 width: 100%;
 	 height: 100%;
-	 position: absolute;
+	 position: relative;
 	 top: -100%;
 
 	 
