--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -130,12 +130,12 @@ body .projectBoxes h3{
 
 }
 
-.back{
+.back img{
 	
 	 width: 100%;
 	 height: 100%;
 	 position: absolute;
-	 top: -100%;
+	 top: 0;
 
 	 
 
