--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -114,32 +114,18 @@ body .projectBoxes h3{
 	width: 52%;
 	margin: auto;
 	margin-top: 25px;
+	 position:relative;
 }
 
 .postcard img{
+	position:absolute;
 	width: 100%;
 	height: 100%;
 
 }
 
 
- .front{
-	 width: 100%;
-	 height: 100%;
-	 
 
-}
-
-.back img{
-	
-	 width: 100%;
-	 height: 100%;
-	 position: relative;
-	 top: 0;
-
-	 
-
-}
 
 
 
