--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -112,6 +112,7 @@ body .projectBoxes h3{
 	border-radius: 0px;
 	Background-color: black;
 	width: 52%;
+	height: 50%;
 	margin: auto;
 	margin-top: 25px;
 	 position:relative;
