--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -31,6 +31,12 @@ body .projectBoxes h3{
 	margin: auto;
 	margin-top: 0;
 	text-decoration: underline;
+	
+}
+
+projectBoxes{
+		width: auto;
+	height: auto;
 }
 
 .RSVP{
@@ -111,8 +117,8 @@ body .projectBoxes h3{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: black;
-	width: 52%;
-	height: 500px;
+	width: 25%;
+	height: 50%;
 	margin: auto;
 	margin-top: 25px;
 	 position:relative;
