--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -117,13 +117,13 @@ postcard{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: black;
-	width: 25%;
-	min-height: 25%;
+	width: 52%;
+	height: auto;
 	margin: auto;
 	margin-top: 25px;
 }
 
-postcard img{
+.postcard img{
 	position: relative;
 	width: 100%;
 	height: 100%;
