--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -112,17 +112,75 @@ body .projectBoxes h3{
 
 }
 
+
+.card>a {
+  display: block;
+  margin-bottom: 10px;
+  padding: 10px;
+  padding-left:45%;
+  padding-right:45%;
+  width: 10%;
+	
+  background: grey;
+  border: 1px solid black;
+  border-radius: 0px;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.card>a.unflip { display: none; }
+.card>div.card { position: relative; }
+
+.card>img { 
+  position: absolute;
+  width: 50%;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -ms-transition: all 1s;
+  transition: all 1s;
+}
+
+.card>img.front { z-index: 1; }
+
+.card>img.back, div#flip:target img.front {
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+  z-index: 0;
+}
+
+div#flip:target a.flip { display: none; }
+div#flip:target a.unflip { display: block; }
+
+div#flip:target img.back {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+  z-index: 1;
+}
+
 .postcard{
-	float: left;
+	   display: inline-block;
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: black;
 	width: 52%;
-	height: auto;
-	margin: auto;
+	height: 100%;
+	margin-left: 0;
 	margin-top: 25px;
 }
 
+
+.dummy>img{
+	width: 101%;
+	visibility: hidden;
+}
 
 
 
