--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -142,13 +142,12 @@ body .projectBoxes h3{
   transition: all 1s;
 }
 
-.card>img.front { z-index: 1; }
+.card>img.front { 
+	z-index: 1;
+}
 
 .card>img.back, div#flip:target img.front {
   -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
   z-index: 0;
 }
@@ -158,9 +157,6 @@ div#flip:target a.unflip { display: block; }
 
 div#flip:target img.back {
   -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
   transform: rotateY(0deg);
   z-index: 1;
 }
