--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -121,24 +121,26 @@ body .projectBoxes h3{
   padding-right:45%;
   width: 10%;
 	
-  background: grey;
+  background: rgb(51,0,111);
   border: 1px solid black;
   border-radius: 0px;
-  color: white;
+  color: rgb(232,211,162);
   text-transform: uppercase;
   text-decoration: none;
 }
 
-.card>a.unflip { display: none; }
-.card>div.card { position: relative; }
+.card>a.unflip { 
+	display: none; 
+}
+
+.card>div.card { 
+	position: relative; 
+}
 
 .card>img { 
   position: absolute;
   width: 50%;
   -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -o-transition: all 1s;
-  -ms-transition: all 1s;
   transition: all 1s;
 }
 
