--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -140,7 +140,6 @@ body .projectBoxes h3{
 .card>img { 
   position: absolute;
   width: 50%;
-  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
@@ -149,7 +148,7 @@ body .projectBoxes h3{
 }
 
 .card>img.back, div#flip:target img.front {
-  -webkit-transform: rotateY(-180deg);
+transform: rotateY(-180deg);
    z-index: 0;
  
 }
@@ -158,7 +157,8 @@ div#flip:target a.flip { display: none; }
 div#flip:target a.unflip { display: block; }
 
 div#flip:target img.back {
-  -webkit-transform: rotateY(0deg);
+
+	transform: rotateY(0deg);
   z-index: 1;
 }
 
