--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -121,7 +121,7 @@ body .projectBoxes h3{
   padding-right:45%;
   width: 10%;
 	
-  background: rgb(51,0,111); 
+  background:blue; 
   border: 1px solid black;
   border-radius: 0px;
   color: rgb(232,211,162);
