--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -114,26 +114,59 @@ body .projectBoxes h3{
 
 
 
-.card {
-  height: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  transition: all 1s;
-  width: 100%;
-}
-.card:hover {
-  transform: rotateY(180deg);
-}
-.card .side {
-  backface-visibility: hidden;
-  height: 100%;
-  position: absolute;
-  width: 100%;
-}
-.card .back {
-  transform: rotateY(180deg);
+
+
+.card>a {
+  display: block;
+  margin-bottom: 10px;
+  padding: 10px;
+  padding-left:45%;
+  padding-right:45%;
+  width: 10%;
+	
+  background: rgb(51,0,111);
+  border: 1px solid black;
+  border-radius: 0px;
+  color:rgb(232,211,162);
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
+.card>a.unflip { display: none; }
+.card>div.card { position: relative; }
+
+.card>img { 
+  position: absolute;
+  width: 50%;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -ms-transition: all 1s;
+  transition: all 1s;
+}
+
+.card>img.front { z-index: 1; }
+
+.card>img.back, div#flip:target img.front {
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+  z-index: 0;
+}
+
+div#flip:target a.flip { display: none; }
+div#flip:target a.unflip { display: block; }
+
+div#flip:target img.back {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+  z-index: 1;
+}
 
 .postcard{
 	   display: inline-block;
@@ -144,13 +177,15 @@ body .projectBoxes h3{
 	height: 100%;
 	margin-left: 0;
 	margin-top: 25px;
-	transform-style: preserve-3d;
 }
 
-.postcard img{
-width: 100%;
-height: 100%;
+
+.dummy>img{
+	width: 101%;
+	visibility: hidden;
 }
+
+
 
 
 
