--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -124,7 +124,7 @@ body .projectBoxes h3{
   padding-right:45%;
   width: 10%;
 	
-  background: rgb(51,0,111);
+  background: blue;
   border: 1px solid black;
   border-radius: 0px;
   color:rgb(232,211,162);
@@ -149,7 +149,7 @@ body .projectBoxes h3{
 
 .card>img.back, div#flip:target img.front {
 	transition: opacity 2s ease-in;
-  z-index: 0;
+  z-index: 1;
 }
 
 div#flip:target a.flip { display: none; }
