--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -116,6 +116,7 @@ body .projectBoxes h3{
 
 
 
+
 .card>a {
   display: block;
   margin-bottom: 10px;
@@ -124,39 +125,47 @@ body .projectBoxes h3{
   padding-right:45%;
   width: 10%;
 	
-  background: blue;
+  background: grey;
   border: 1px solid black;
   border-radius: 0px;
-  color:rgb(232,211,162);
+  color: white;
   text-transform: uppercase;
   text-decoration: none;
 }
 
-.card>a.unflip { 
-	display: none; 
-}
-.card>div.card {
-	position: relative;
-}
+.card>a.unflip { display: none; }
+.card>div.card { position: relative; }
 
 .card>img { 
   position: absolute;
   width: 50%;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -ms-transition: all 1s;
   transition: all 1s;
 }
 
 .card>img.front { z-index: 1; }
 
 .card>img.back, div#flip:target img.front {
-	transition: opacity 2s ease-in;
-  z-index: 1;
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+  z-index: 0;
 }
 
 div#flip:target a.flip { display: none; }
 div#flip:target a.unflip { display: block; }
 
 div#flip:target img.back {
-  transition: opacity 2s ease-in;
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  transform: rotateY(0deg);
   z-index: 1;
 }
 
@@ -176,7 +185,6 @@ div#flip:target img.back {
 	width: 101%;
 	visibility: hidden;
 }
-
 
 
 
