--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -110,9 +110,11 @@ body .projectBoxes h3{
 	background-color: rgb(51,0,111);
 	color: rgb(232,211,162);
 	font-size: 175%;
-
 }
 
+.party a{
+	color: rgb(232,211,162);
+}
 
 
 
