--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -11,7 +11,7 @@ body {
 body> .SubBoxes> div{
 	border: 10px solid black;
 	border-radius: 0px;
-	Background-color: white;
+	Background-color: rgb();
 	width: 67%;
 	margin: auto;
 	margin-top: 25px;
@@ -21,16 +21,9 @@ body> .SubBoxes> div{
 body> .SubBoxes> .div> h1,h4, h3, p{
 	margin-left: 15px;
 	margin-right: 15px;
+	color: black;
+	font-family:"Times New Roman";
 
 }
 
-body> .SubBoxes> div{
-	border: 10px solid black;
-	border-radius: 0px;
-	Background-color: white;
-	width: 67%;
-	margin: auto;
-	margin-top: 25px;
-
-}
 
