--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -1,9 +1,10 @@
 body{
    background-image: url("../media/pictures/WP_20161026_02_32_27_Pro.jpg");
-   font-family: Helvetica;
+
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
+	font-family: "Calibri";
 	
 }
 
