--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -1,6 +1,6 @@
 body {
    background-image: url("../media/pictures/WP_20161026_02_32_27_Pro.jpg");
-   font-family: Helvetica;
+
    background-size: cover;
    background-position: center center;
 
@@ -22,7 +22,7 @@ body> .SubBoxes> .div> h1,h4, h3, p{
 	margin-left: 15px;
 	margin-right: 15px;
 	color: black;
-	font-family:"Times New Roman";
+	font-family: "Calibri";
 
 }
 
