--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -22,7 +22,7 @@ body> .SubBoxes> .div> h1,h4, h3, p{
 	margin-left: 15px;
 	margin-right: 15px;
 	color: black;
-	font-family: "Calibri";
+	font-family: "Arial";
 
 }
 
