--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -5,7 +5,7 @@ body {
    background-position: center center;
 
    background-attachment: fixed;
-   
+   font-family: "Arial";
 }
 
 body> .SubBoxes> div{
