--- a/CSS/devindurham.resume.css
+++ b/CSS/devindurham.resume.css
@@ -11,8 +11,13 @@ body{
     	border-radius: 0px;
 	background-color: white;
     	width: 67%;
-	height: 1000px;
     	margin: auto;
 	margin-top: 25px;
 	padding: 0px;
+}
+
+.resumeBox object{
+	width: 100%;
+	height: 500px;
+
 }
