--- a/CSS/devindurham.index2.css
+++ b/CSS/devindurham.index2.css
@@ -1,5 +1,5 @@
 body{
-  background-image: "../media/pictures/IMG_20170609_030421 (3).jpg"
+  background-color: red;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
