--- a/CSS/devindurham.index2.css
+++ b/CSS/devindurham.index2.css
@@ -1,6 +1,3 @@
 body{
-  background-color: red;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: lightblue;
 }
