--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -1,5 +1,5 @@
 .boxed {
-	font-family: Helvetica;
+	font-family: Arial;
     	background: url("../media/paper.jpg") gray;
 	background-size: cover;
 	background-position: right;
