--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -1,6 +1,6 @@
 .boxed {
 	font-family: Helvetica;
-    	background: url("../media/pictures/IMG_20170609_030421 (3).jpg") gray;
+    	background: url("../paper.jpg") gray;
 	background-size: cover;
 	background-position: right;
 	background-repeat: no-repeat;
