--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -1,5 +1,5 @@
 body {
-   background-image: url("../media/pictures/paper.jpg");
+   background-image: url("../media/pictures/WP_20161026_02_32_27_Pro.jpg");
 
    background-size: cover;
    background-position: center center;
