--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,17 +7,17 @@ body {
    font-family: Helvetica;
 }
 
-body> .SubBoxes> div{
-	border: 10px solid black;
-	border-radius: 0px;
+.SubBoxes{
+	font-color: white;
 	width: 67%;
 	margin: auto;
 	margin-top: 25px;
-	background-color: white;
+	background-color: black;
 
 }
 
-body> .SubBoxes> .div> h1,h4, h3, p{
+.SubBoxes> h1,h4, h3, p{
+	text-decoration: underline;
 	margin-left: 15px;
 	margin-right: 15px;
 	color: black;
