--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -8,6 +8,15 @@ body {
    font-family: "Arial";
 }
 
+.top{
+	border: 10px solid black;
+	border-radius: 0px;
+	width: 100%;
+	margin: auto;
+	background-color: Gray;
+}
+	
+
 body> .SubBoxes> div{
 	border: 10px solid black;
 	border-radius: 0px;
