--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -15,6 +15,11 @@ body {
 	margin: auto;
 	background-color: Gray;
 }
+
+top> img{
+	align: left;
+	height: 100%;
+	width: auto;
 	
 
 body> .SubBoxes> div{
