--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -8,21 +8,23 @@ body {
    font-family: "Arial";
 }
 
-.top{
-	border: 10px solid black;
-	border-radius: 0px;
-	width: 100%;
-	margin: auto;
-	background-color: Gray;
+div.top{
+	top: 50%;
+	bottom: 50%
+	display: block;
+	text-shadow:1px 2px 4px white;
+	
 }
 
-.top> img{
-	align: left;
-	height: 5%;
-	width: 5%;
-	
+body> .boxed> .top> img{
+	height: 15%;
+	width: 15%;
+	padding-right: 25px;
+	min-height: 150px;
+	min-width: 150px; 
+}
 
-.SubBoxes{
+SubBoxes{
 	border: 10px solid black;
 	border-radius: 0px;
 	width: 67%;
