--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -8,7 +8,7 @@ body {
    font-family: "Arial";
 }
 
-top{
+.top{
 	top: 50%;
 	bottom: 50%
 	display: block;
@@ -16,7 +16,7 @@ top{
 	
 }
 
-top> img{
+.top> img{
 	height: 15%;
 	width: 15%;
 	padding-right: 25px;
@@ -24,7 +24,7 @@ top> img{
 	min-width: 150px; 
 }
 
-SubBoxes{
+.SubBoxes{
 	border: 10px solid black;
 	border-radius: 0px;
 	width: 67%;
@@ -34,7 +34,7 @@ SubBoxes{
 
 }
 
-body> .SubBoxes> .div> h1,h4, h3, p{
+.SubBoxes> .div> h1,h4, h3, p{
 	margin-left: 15px;
 	margin-right: 15px;
 	color: black;
