--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -13,7 +13,7 @@ body {
 	bottom: 50%
 	display: block;
 	text-shadow:1px 2px 4px white;
-	background-color: Black;
+	background-color: dimGray;
 	
 }
 
