--- a/projects/projects.css
+++ b/projects/projects.css
@@ -7,8 +7,23 @@ body{
     margin-top: 3%;
 }
 
+.title{
+    display: block;
+    padding-bottom: 90px;
+}
+
+a{
+    color: rgb(0,255,0);
+}
+
 h1{
     text-decoration: underline;
+    float: left;
+}
+
+h5{
+    float: right;
+    line-height: 50px;
 }
 
 h3{
@@ -26,6 +41,20 @@ p{
 
 .projectBoxes{
     background-image: linear-gradient(rgb(0,255,0), rgb(0, 82, 18));
+}
+
+.osv img{
+    width:20%;
+    height: 50%;
+    padding-left: 30px;
+    padding-right: 15px;
+    float: left;
+}
+
+.hackalong img{
+    width:12%;
+    height: 12%;
+    float: right;
 }
 
 .container{
