* updated accent color to Contact page

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -8,6 +8,10 @@ body{
     height:100vh;
 
 }
+a{
+    color: rgb(255,255,0);
+}
+
 h1{
     padding-left: 3%;
     text-decoration: underline;
@@ -15,6 +19,7 @@ h1{
 
 h3{
     padding-left: 3%;
+    margin-top: 30px;
     padding-bottom: 0;
     margin-bottom: 0; 
 }
@@ -25,9 +30,6 @@ p{
     padding-right: 5%;
 }
 
-a{
-    color: white;
-}
 
 .contactBox{
     background-image: linear-gradient(rgb(255,255,0),rgb(155, 100, 0));
@@ -56,7 +58,10 @@ td{
 }
 
 tr:nth-child(odd) {
-    background-color: #424242;
+    background-color: #302f2f;
+}
+tr:nth-child(even) {
+    background-color: #666464;
 }
 
 @media screen and (max-device-width: 800px) {
