--- a/about/about.css
+++ b/about/about.css
@@ -7,23 +7,46 @@ body{
     margin-top: 3%;
 }
 
+.title{
+    margin-bottom: 50px;
+}
+
+.title h1{
+    float: left;
+    margin: auto;
+
+}
+
+.home{
+    width: 75px;
+    margin-top: -10px;
+
+    float: right;
+    display: block;
+}
+
 .background{
     background-image: linear-gradient(rgb(0,155,155), rgb(0,0,255));
     margin: 1%;
 }
 
 .past img{
-    max-width:35%;
+    max-width:175px;
     width: auto;
     height: auto;
     float: right;
 }
 
 .values img{
-    max-width:50%;
+    max-height:700px;
     width: auto;
     height: auto;
     float: center;
+}
+
+.values .q{
+    font-style: italic;
+    font-weight: bold;
 }
 
 .container{
@@ -35,10 +58,12 @@ body{
 
 h1{
     text-decoration: underline;
+    color: rgb(0,200,200);
 }
 
 h2{
     padding-left: 2%; 
+    color: rgb(0, 200, 200);
 }
 
 
