--- a/projects/projects.css
+++ b/projects/projects.css
@@ -5,11 +5,31 @@ body{
     width: 67%;
     margin: auto;
     margin-top: 3%;
+    
+}
+.title{
+    margin-bottom: 50px;
 }
 
-.title{
+.title h1{
+    float: left;
+    margin: auto;
+    margin-bottom: 0;
+
+}
+
+.title h5{
+    float: left;
+    margin: 0;
+
+}
+
+.home{
+    width: 75px;
+    margin-top: -10px;
+
+    float: right;
     display: block;
-    padding-bottom: 90px;
 }
 
 a{
@@ -19,15 +39,18 @@ a{
 h1{
     text-decoration: underline;
     float: left;
+    color: rgb(0,255,0);
 }
 
 h5{
     float: right;
     line-height: 50px;
+
 }
 
 h3{
     padding-left: 2%; 
+    color: rgb(0,255,0);
 }
 
 p{
@@ -44,17 +67,24 @@ p{
 }
 
 .osv img{
-    width:20%;
-    height: 50%;
+    max-height: 250px;
+    max-width: 150px;
+    width:auto;
+    height: auto;
     padding-left: 30px;
     padding-right: 15px;
-    float: left;
+    float: right;
 }
 
 .hackalong img{
-    width:12%;
-    height: 12%;
-    float: right;
+    max-height: 75px;
+    max-width: 75px;
+    width:auto;
+    height: auto;
+    padding-left: 30px;
+    padding-right: 15px;
+    
+    float: left;
 }
 
 .container{
