--- a/contact/contact.css
+++ b/contact/contact.css
@@ -21,7 +21,7 @@ body {
 }
 
 a{
-    color: rgb(255,255,0);;
+    color: rgb(200,200,0);
 }
 
 .title h1{
@@ -41,7 +41,7 @@ a{
 h1{
     padding-left: 3%;
     text-decoration: underline;
-    color: rgb(255,255,0);
+    color: rgb(200,200,0);
 }
 
 h3{
@@ -49,7 +49,7 @@ h3{
     margin-top: 30px;
     padding-bottom: 0;
     margin-bottom: 0; 
-    color: rgb(255,255,0);
+    color: rgb(200,200,0);
 }
 p{
     padding-top: 0;
@@ -76,7 +76,8 @@ table {
     margin: auto;
     margin-top: 5%;
     border-collapse: collapse;
-
+    font-size: 1em;
+    overflow: hidden;
 }
 td{
     padding: 1%;
@@ -93,6 +94,7 @@ tr:nth-child(even) {
 
     body {
         width: 100%;
+        font-size: 1em;
     }
     .content{
         margin: 3%;
@@ -103,6 +105,7 @@ tr:nth-child(even) {
 
     body {
         width: 100%;
+        font-size: 1em;
     }
     .content{
         margin: 3%;
