--- a/media/media.css
+++ b/media/media.css
@@ -1,5 +1,5 @@
 body{
-    color: white;
+
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     margin-top: 3%;
@@ -15,6 +15,7 @@ body {
 
 .title{
     margin-bottom: 50px;
+    color: rgb(150,0,0);
 }
 
 .title h1{
