--- a/contact/contact.css
+++ b/contact/contact.css
@@ -17,7 +17,12 @@ body {
   }
 
 .title{
-    margin-bottom: 50px;
+    margin-bottom: 10%;
+    width: 100%;
+}
+
+.title h1, h2, h3{
+    width: 100%;
 }
 
 a{
