--- a/holidaze/login.css
+++ b/holidaze/login.css
@@ -8,11 +8,13 @@ body{
     text-shadow: -2px -1px 5px  rgb(0,0,0,1);
     letter-spacing: 2px;
     margin: 0;
+    min-width: 300px;
 }
 
 .container{
     background-color: rgb(0,100,0,.95);
     width: 25%;
+    min-width: 300px;
     margin: auto;
     margin-top: 10%;
     text-align: center;
@@ -46,16 +48,63 @@ footer{
     position: absolute;
     bottom: 0;
     border-top: 2px solid;
+    
 }
 
 footer ul{
     width: 100%;
     margin: auto;
+    list-style-type: none;
+    padding: 0;
+    display: inline;
 }
 
 footer li{
-
     display: inline-block;
-    padding-left: 20%;
     text-align: center;
+    margin: auto;
+    width: 32%;
+}
+
+
+
+@media screen and (max-device-width: 1000px) {
+    .container{
+        font-size: 2em;
+        width: 66%;
+    }
+
+    .loginBox{
+        font-size: 2em;
+    }
+
+    input{
+        font-size:1em;
+
+    }
+
+    footer{
+        font-size: 3em;
+    }
+
+}
+  
+  @media screen and (max-width: 1000px) {
+    .container{
+        font-size: 2em;
+        width: 66%;
+    }
+
+    .loginBox{
+        font-size: 2em;
+    }
+
+    input{
+        font-size:1em;
+
+    }
+
+    footer{
+        font-size: 3em;
+    }
 }
