--- a/holidaze/main.css
+++ b/holidaze/main.css
@@ -10,11 +10,14 @@ body{
     text-shadow: -2px -1px 5px  rgb(0,0,0,1);
     min-width: 300px;
     font-size: 1.5em;
+   
 }
 
 
 .titleBar{
     width: 100%;
+    padding-top: 3%;
+    padding-bottom: 3%;
     background-color: rgb(0,100,0,.95);
     text-align: center;
     display: block;
@@ -22,6 +25,7 @@ body{
 
 .titleBar h1{
     display: inline;
+
 }
 
 .titleBar .menu{
@@ -50,13 +54,21 @@ input {
 
 
 .Leaders{
-    margin: auto;
+    display: flex;
+    float: left;
     text-align: center;
+    overflow-x: scroll;
+    height: 20%;
+    width: 100%;
+ 
 }
 
 .currLeader{
-    width: 30%;
-    display: inline-block;
+    float: left;
+    padding: 5%;
+    width: 25%;
+    height: 5%;
+    text-align: center;
 }
 
 .name{
@@ -65,6 +77,7 @@ input {
     font-weight: bolder;
     text-shadow: 3px 3px 5px  rgb(0,0,0,1);
     -webkit-text-stroke: 1.25px black;
+    text-align: center;
 }
 
 .score{
@@ -82,8 +95,10 @@ input {
 
 .words{
     width: 90%;
+    max-height: 75%;
     margin: auto;
-    border: 3px solid rgb(250,250,250,1);
+    border: 5px solid rgb(250,250,250,1);
+    overflow: scroll;
 }
 
 table{
@@ -91,15 +106,24 @@ table{
     background-color: rgb(0,100,0,.95);
     overflow: hidden;
     text-align: center;
+    position: sticky;
+    top:0;
+    z-index: 10;
 }
 
 table td{
     border: 1px solid;
-
+    background-color: rgba(0, 50, 0, 0.95);
 }
 
 table th{
     text-decoration: underline;
+    position: relative;
+    top: 0;
+}
+
+table td, th{
+    padding: 1%;
 }
 
 
@@ -202,10 +226,11 @@ footer li{
     }
     table{
         font-size: 1.5em;
+        
     }
 
-    .name{
-        font-size: 2em;
+    #leaders{
+        font-size: 1.25em;
         margin-top: 1%;
     }
 
