New entry in projects

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -91,6 +91,16 @@ p{
     float: left;
 }
 
+.holidaze img{
+    max-height: 500px;
+    max-width: 200px;
+    width:auto;
+    height: auto;
+    padding-left: 30px;
+    padding-right: 15px;
+    float: right;
+}
+
 .container{
     margin: 1%;
 
