--- a/index.css
+++ b/index.css
@@ -14,7 +14,8 @@ body {
 
 .accordion-title {
   position: relative;
-  background:rgba(0, 0, 0, 1);
+  background:rgb(0, 0, 0);
+  opacity: 1;
 }
 
 
@@ -99,7 +100,8 @@ body {
   overflow: auto;
   position: relative;
   transition: margin 0.3s ease 0.1s;
-  background-color: rgb(0,0,0,1);
+  background-color: rgb(0,0,0);
+  opacity: 1;
 } 
 
 #welcome{
@@ -115,6 +117,7 @@ body {
   font-size: 2em;
   text-shadow: 5px 1px #000000;
   text-decoration: underline;
+  opacity: 1;
 }
 
 object{
