--- a/index.css
+++ b/index.css
@@ -1,15 +1,22 @@
 body {
   width: 100%;
   height: 100%;
-  background:#f5f5f5;
+  background:black;
   font:14px "Open Sans",arial,sans-serif;
-  background-image: url('https://thumbs.gfycat.com/HoarseAfraidDuck-size_restricted.gif');
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
   margin: 0;
 }  
 
+#myVideo{
+  position: fixed;
+  z-index: -100;
+  width: 100%;
+  height: 100%;
+  -ms-object-fit: cover;
+  object-fit: fill;
+}
 
 
 .accordion-title {
@@ -47,9 +54,11 @@ body {
 /* Generated styles starts here */
 
 .accordion {
-  border-right-color: rgb(0, 0, 0);
+  border-right-color: rgb(255, 255, 255);
+  border-left-color: rgb(255, 255, 255);
   border-style: solid;
   border-width: 3px;
+  border-top-width: 0px;
   flex-direction: row;
   height: 101%;
   width: 85%;
@@ -105,7 +114,7 @@ body {
 } 
 
 #welcome{
-  background-color: rgb(0,0,0,.5); 
+  background-color: rgb(0,0,0,.66); 
 }
 
 .titlecard{
